# Rosario-ROV

./: .gitignore  .gitmodules  README.md  broadcast.py  servo.py
Both/: main.py  tsys01.py
DataRecorder/: display.py  get-garbage.py  main.py
Lights/: main.py
PCB/Pi Hat/: Pi Hat-cache.lib  Pi Hat.kicad_pcb  Pi Hat.pro  Pi Hat.sch  sym-lib-table
PCB/ROVPCB/: Adafruit_TSL2591-eagle-import.lib  LTC4316CMSPBF.lib  LTC4316CMSPBF.mod  LTC4316IDDPBF.lib  LTC4316IDDPBF.mod  ROVPCB-cache.lib  ROVPCB.kicad_pcb  ROVPCB.pro  ROVPCB.sch  fp-info-cache  sym-lib-table
PCB/ROVPCB/Adafruit TSL2591.pretty/: 0805-NO.kicad_mod  1X06_ROUND_FULL_76.kicad_mod  ADAFRUIT_5MM.kicad_mod  DFN6_TAOS.kicad_mod  MOUNTINGHOLE_2.5_PLATED.kicad_mod  OEM Board.kicad_mod  SOT23-5.kicad_mod  SOT23-WIDE.kicad_mod  _0805MP.kicad_mod
PCB/ROVPCB/Gerberfiles/: ROVPCB-B_CrtYd.gbr  ROVPCB-B_Cu.gbl  ROVPCB-B_Mask.gbs  ROVPCB-B_SilkS.gbo  ROVPCB-Edge_Cuts.gm1  ROVPCB-F_Cu.gtl  ROVPCB-F_Mask.gts  ROVPCB-F_Paste.gtp  ROVPCB-F_SilkS.gto  ROVPCB-NPTH.drl  ROVPCB-PTH.drl  ROVPCB.drl
PCB/ROVPCB/bom/: ROVBOM.xlsx  ibom.html
PCB/ROVPCB/footprints.pretty/: 5227161-1.kicad_mod  Insignia.kicad_mod  LTC2451CTS8-TRMPBF.kicad_mod
PressureSensor/: .main.py.swp  data0.txt  data1.txt  main.py  ms5837.py  test.py
ROV/: .gitignore  CMakeLists.txt  CMakeSettings.json  broadcast.py  record-video.py  video.py
ROV/src/: main.cpp
ROV/src/Camera/: Camera.cpp  Camera.h  ServoHalf.cpp  ServoHalf.h
ROV/src/Core/: Engine.cpp  Engine.h  Event.h  EventHandler.h  GlobalContext.cpp  GlobalContext.h
ROV/src/Existences/: Camera.cpp  Camera.h  FileTransfer.cpp  FileTransfer.h  Light.cpp  Light.h  Power.cpp  Power.h  Servo.cpp  Servo.h  ServoHalf.cpp  ServoHalf.h  ServoTray.cpp  ServoTray.h
ROV/src/Factories/: PacketFactory.cpp  PacketFactory.h
ROV/src/Network/: Network.cpp  Network.h  NetworkConstants.cpp  NetworkConstants.h
ROV/src/Sensors/: Battery.cpp  Battery.h  Conductivity.cpp  Conductivity.h  InternalHumidity.cpp  InternalHumidity.h  InternalPressure.cpp  InternalPressure.h  InternalTemperature.cpp  InternalTemperature.h  Lux.cpp  Lux.h  Pressure.cpp  Pressure.h  Sensor.cpp  Sensor.h  Temperature.cpp  Temperature.h
ROV/src/Sensors/lib/: ECEZ0.cpp  ECEZ0.h  LTC2451.cpp  LTC2451.h  MS5837.cpp  MS5837.h  TSL2591.cpp  TSL2591.h  TSYS01.cpp  TSYS01.h  bme280.cpp  bme280.h
ROV/src/Utilities/: Existence.h  I2CAccess.cpp  I2CAccess.h  InputParser.cpp  InputParser.h  Utilities.cpp  Utilities.h
ROVController/: .gitignore  CMakeLists.txt  CMakeSettings.json  ROVController.sln  ROVController.vcxproj  ROVController.vcxproj.filters  imgui.ini
ROVController/src/: Globals.h  Utilities.cpp  Utilities.h  main.cpp
ROVController/src/Computation/: Calculator.cpp  Calculator.h  Expression.cpp  Expression.h  Grapher.cpp  Grapher.h  Token.cpp  Token.h
ROVController/src/Core/: Engine.cpp  Engine.h  Event.cpp  Event.h  EventHandler.h  GlobalContext.cpp  GlobalContext.h  Network.cpp  Network.h
ROVController/src/Factories/: PacketFactory.cpp  PacketFactory.h  TextFactory.cpp  TextFactory.h
ROVController/src/Frames/: ConnectFrame.cpp  ConnectFrame.h  GraphFrame.cpp  GraphFrame.h  IFrame.cpp  IFrame.h  MainMenuFrame.cpp  MainMenuFrame.h  TitleFrame.cpp  TitleFrame.h  ViewFrame.cpp  ViewFrame.h
ROVController/src/Interfaces/: IUpdateable.h
ROVController/src/UI/: AppLog.cpp  AppLog.h  Button.cpp  Button.h  Options.cpp  Options.h  TextBox.cpp  TextBox.h  UIElement.cpp  UIElement.h
ROVController/src/Utilities/: Device.cpp  Device.h  Mission.cpp  Mission.h  Utilities.cpp  Utilities.h
Record/: ms5837py3.py
Shutdown/: listen-for-shutdown.py  main.py
Video/: main.py  record-video.py
init/: rov-startup.sh
runinScripts/: get-garbage.py  record-video.py
